--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.0",
     "@astrojs/react": "^4.2.3",
     "@fontsource-variable/nunito": "^5.2.5",
     "@tailwindcss/vite": "^4.1.3",
